url filter: remove ending apostrophe

When URLs were inside single quotes, we would include the ending quote
in the parsed URL.  To avoid that, remove a final apostrophe in a URL
when creating the hotspot.

Test:
'https://en.wikipedia.org/wiki/Earth's_rotation'

BUG: 458996
(cherry picked from commit f063ade55b491ef7d6fe6cb87d81adaed00ca041)